\name{DExMAnews}
\title{DExMA News}
\encoding{UTF-8}


\section{Version 0.99.0}{
  \itemize{
    \item DExMA release.
  }
}